<resources>
    <string name="login_user_tip">请输入账号</string>
    <string name="login_password_tip">请输入密码</string>
    <string name="login">登录</string>
    <string name="net_setting">网络设置</string>
    <string name="menu_flush">刷新</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="zfb">支付宝</string>
    <string name="wechat">微信</string>
    <string name="cash">现金</string>
    <string name="card">银行卡</string>
    <string name="wechat_zfb">微信/支付宝</string>

    <string name="member_card">会员卡</string>

    <string name="paid_in_amount">实收金额</string>
    <string name="should_paid">应收金额:</string>
    <string name="charge">找零:</string>
    <string name="print_receipt">打印小票</string>
    <string name="confirm">确认</string>
    <string name="ensure">确定</string>

    <string name="confirm_pay">收款确认</string>
    <string name="confirm_pay_tip">支付成功，页面未刷新时请点击</string>

    <string name="pay_success">支付成功</string>
    <string name="cash_success">收银成功</string>
    <string name="recharge_success">充值成功</string>

    <string name="clear">清空</string>
    <string name="delete">删除</string>
    <string name="collect">收银</string>
    <string name="fit_collect">散客收银</string>
    <string name="member_collect">会员收银</string>
    <string name="open_camera_tip">摄像头已开启</string>
    <string name="please_aim_tip">请将会员卡二维码对准摄像头</string>
    <string name="please_aim_coupon_tip">请将兑换券二维码对准摄像头</string>

    <string name="pay_code_aim_tip">请将付款码对准摄像头</string>

    <string name="please_input_member_or_phone">请输入会员卡号或手机号</string>
    <string name="please_input_coupon_number">请输入兑换券编号</string>

    <string name="please_select_discount">请选择会员卡折扣</string>
    <string name="discount_info">抵扣金额：优惠券-10元；粉币-10元；积分-10元</string>

    <string name="chose_pay">选择支付方式</string>
    <string name="re_chose_pay">重新选择支付方式</string>
    <string name="print_qr_code">打印付款码</string>

    <string name="cancel">取消</string>
    <string name="logout_query">是否退出登录</string>
    <string name="not_pay_order">待支付的订单</string>
    <string name="pay_order">已支付的订单</string>

    <string name="fill_the_small_ticket">补打小票</string>
    <string name="refund">退款</string>
    <string name="follow_subscription">关注公众号</string>
    <string name="customer_scan_code_to_join">顾客扫此码加入会员</string>
    <string name="member_type">会员卡类型</string>

    <string name="input_phone">请输入手机号码</string>
    <string name="phone">手机号码</string>

    <string name="input_identifying_code">请输入验证码</string>
    <string name="identifying_code">验证码</string>
    <string name="get_identifying_code">获取验证码</string>

    <string name="fan_coin">粉币</string>
    <string name="integral">积分</string>
    <string name="current_balance">当前余额:</string>
    <string name="yuan">元</string>
    <string name="please_input_recharge_money">请输入充值金额</string>
    <string name="back">返回</string>
    <string name="please_scan_code_to_get_manual">请扫描二维码获取使用手册</string>
    <string name="manual">使用手册</string>
    <string name="confirm_exit">退出后不会删任何历史订单数据,下次登录时依然可以使用本账号</string>

    <string name="welcome_again">欢迎再次光临</string>
    <string name="tech_support">技术支持·多粉  400-889-4522</string>
    <string name="update_later">稍后更新</string>
    <string name="update_immediately">立即更新</string>
    <string name="data_is_not_exit">非会员</string>
    <string name="order_push_data">"{\"busId\":36,\"businessUtilName\":\"shop.deeptel.com.cn/shops/web/cashier/CF946E2B/payCallBack?id=ff8080815f6b4f93015f6b5ff9d3001b\",\"eqCode\":\"863326012751264\",\"model\":53,\"money\":0.01,\"orderId\":1085,\"orderNo\":\"YD1509334972874\",\"pay_type\":0,\"status\":\"success\",\"time\":\"2017-10-30 11:42:57\",\"type\":1}"</string>
    <string name="please_use_wechat_code">请扫描微信支付授权码</string>

    <string name="please_check_customer_display_connect">请检查收银系统的客显端口设置和连线</string>
    <string name="please_select_baud_rate">请选择模式</string>
    <string name="please_input_baud_rate">请输入模式</string>
    <string name="current_baud_rate">当前模式</string>
    <string name="please_scan_one_good_on_cashier_desk">请拿扫码枪录入一件商品</string>
    <string name="waiting_for_data_receive">等待数据接收中...</string>
    <string name="please_counting_money">请在收银台查看当前金额</string>
    <string name="please_input_counting_money">请输入上一步的商品金额然后按确定</string>
    <string name="connect_success_and_open_customer_display">调试成功\n开启客显收银模式</string>

    <string name="next_step">下一步</string>
    <string name="step1">第一步</string>
    <string name="step2">第二步</string>
    <string name="step3">第三步</string>
    <string name="step4">第四步</string>
    <string name="step5">第五步</string>

    <string name="baud1200">1200波特率</string>
    <string name="baud2400">2400波特率</string>
    <string name="baud4800">4800波特率</string>
    <string name="baud9600">9600波特率</string>
    <string name="other">其他</string>
    <string name="often_baud_rate">常用的波特率:</string>
    <string name="baud_rate">波特率:</string>
    <string name="mess_code">数据不匹配，5秒后自动返回上一步</string>
    <string name="verification_success">核销成功</string>

    <string name="test_number">5+6+2</string>
    <string name="network_disconnect_please_check">网络未连接，请先检查网络</string>


    <string name="pay_money">付款金额</string>
    <string name="order_money">订单金额</string>

    <string name="return_money">实退金额</string>
    <string name="return_money_reason">退款原因</string>
    <string name="select_return_money_reason">选择退款原因 ＞ </string>
    <string name="return_money_way">退款方式</string>
    <string name="confirm_return_money">确认退款</string>
    <string name="close">关闭</string>
    <string name="return_reason_tag">退款标签名称</string>
    <string name="limit_ten_words">限制10个字内</string>
    <string name="limit_15_words">限制15个字内</string>

    <string name="save">保存</string>
    <string name="disable_use_chinese_typewriting">无法使用中文输入法?</string>
    <string name="settings">设置</string>
    <string name="typewriting01tip">点击下面的“设置”按钮，将“谷歌拼音输入法”打开</string>
    <string name="typewriting01toast">请先将谷歌输入法打开</string>
    <string name="settings_success">设置成功</string>
    <string name="typewriting02tip">将“谷歌拼音键盘”设置为默认键盘</string>
    <string name="finish">完成</string>
    <string name="device_name">设备名称：</string>
    <string name="not_set">未设置</string>
    <string name="saving">保存中...</string>
    <string name="cannot_input_nothing">输入不能为空</string>
    <string name="returning">退款中...</string>
    <string name="return_order_list">返回订单列表</string>
    <string name="return_success">退款成功</string>
    <string name="print">打印</string>

    <string name="fixed_money_no_data_tip">您还没有设置固定金额哦～</string>
    <string name="click_add">点击添加</string>
    <string name="edit">编辑</string>
    <string name="fixed_money">固定金额</string>
    <string name="add">添加</string>
    <string name="add_fixed_money">添加固定金额</string>
    <string name="please_input_money">请输入金额</string>
    <string name="fixed_money_pay">固定金额收款</string>
    <string name="setting_money">设置金额</string>
    <string name="pay_auto_print">支付自动打印</string>
    <string name="exchange_auto_print">交班自动打印</string>
    <string name="auto_print_setting">自动打印设置</string>
    <string name="return_reason_tag_list">退款原因标签列表</string>
    <string name="add_new_tag">新增标签</string>
    <string name="return_money_scan_code_tip">退款时,授权人请扫描此二维码</string>
    <string name="return_money_qr_code">退款授权码</string>
    <string name="order_info">订单详情</string>
    <string name="total_money">合计金额</string>
    <string name="to_settle_accounts">去结算</string>
    <string name="discount_card_name">折扣卡</string>
    <string name="value_card_name">储值卡</string>

    <string name="card_type">卡类型</string>
    <string name="balance">余额</string>

</resources>
