<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/dp_64"
        android:layout_height="@dimen/dp_55"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_58"
        android:src="@drawable/icon_duofen" />

    <EditText
        android:id="@+id/userEditText"
        style="@style/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/logo"
        android:layout_margin="@dimen/dp_20"
        android:drawableLeft="@drawable/icon_user"
        android:drawablePadding="@dimen/dp_13"
        android:hint="@string/login_user_tip"
        android:inputType="textVisiblePassword"
        android:textColor="@color/login_input_text_color"
        android:textColorHint="#999999" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/userEditText"
        android:layout_margin="@dimen/dp_20"
        android:drawableLeft="@drawable/icon_pwd"
        android:drawablePadding="@dimen/dp_13"
        android:hint="@string/login_password_tip"
        android:inputType="textPassword"
        android:textColor="@color/login_input_text_color"
        android:textColorHint="#999999" />

    <Button
        android:id="@+id/loginButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/passwordEditText"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/selector_red_button"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/netSettingButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/loginButton"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/selector_white_button"
        android:text="@string/net_setting"
        android:textColor="@drawable/selector_text_color" />

    <TextView
        android:id="@+id/manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_50"
        android:text="@string/manual"
        android:textColor="@drawable/custom_red"
        android:textSize="@dimen/dp_15" />
    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:textColor="#d2d2d2"
        android:textSize="@dimen/dp_12" />

</RelativeLayout>