<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_44"
    android:background="@color/white">

    <TextView
        android:id="@+id/reasonItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_16"
        android:gravity="center_vertical"
        android:text="@string/print_qr_code"
        android:textColor="#333333"
        android:textSize="@dimen/dp_15" />

    <Button
        android:id="@+id/edit"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_26"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/dp_68"
        android:background="@drawable/selector_red_button"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/delete"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_26"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/dp_14"
        android:background="@drawable/selector_white_no_border_button"
        android:text="@string/delete"
        android:textColor="#666666"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_16"
        android:background="#e6e6e6" />
</RelativeLayout>