<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="20dp"
        android:rotation="180"
        android:id="@+id/text_pay_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pay_success"
        android:textColor="@color/black"
        android:textSize="20dp" />
    <TextView
        android:layout_below="@id/text_pay_success"
        android:layout_marginTop="20dp"
        android:rotation="180"
        android:id="@+id/payNumber"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="365"
        android:textColor="@color/black"
        android:textSize="60dp" />
    <ImageView
        android:rotation="180"
        android:src="@drawable/success"
        android:paddingTop="110dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:layout_margin="15dp"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray"/>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/selector_white_button"
        android:text="@string/confirm"
        android:textColor="@drawable/selector_text_color"
        android:textSize="16sp" />

    <Button
        android:id="@+id/printButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@id/confirmButton"
        android:layout_margin="20dp"
        android:background="@drawable/selector_red_button"
        android:text="@string/print_receipt"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/printButton"
        android:gravity="center"
        android:text="@string/cash_success"
        android:textColor="@color/black"
        android:textSize="18dp" />

</RelativeLayout>