<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_72"
    android:layout_marginLeft="@dimen/dp_14"
    android:layout_marginRight="@dimen/dp_14"
    android:background="@drawable/white_radius_10_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:textColor="#999999"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_38"
            android:textColor="#333333"
            android:textSize="@dimen/dp_20" />

        <Button
            android:id="@+id/edit"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_26"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_68"
            android:background="@drawable/selector_red_button"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_26"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_14"
            android:background="@drawable/selector_white_no_border_button"
            android:text="@string/delete"
            android:textColor="#666666"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/noData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_radius_10_bg"
        android:gravity="center"
        android:text="@string/fixed_money_no_data_tip"
        android:textColor="#999999"
        android:textSize="@dimen/dp_13"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/editMoneyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_radius_10_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/add_fixed_money"
            android:textColor="#999999"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_14"
            android:layout_marginLeft="@dimen/dp_12"
            android:text="¥"
            android:textColor="#333333" />

        <EditText
            android:id="@+id/editMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_24"
            android:background="@null"
            android:hint="@string/please_input_money"
            android:inputType="number|numberDecimal"
            android:textColor="#333333"
            android:textColorHint="#d3d3d3"
            android:textSize="@dimen/dp_20" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_14"
            android:background="#e2e2e2" />
    </RelativeLayout>


</FrameLayout>