<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/member_info_layout"
        layout="@layout/member_head_info_layout" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_68"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/fenLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_14"
                android:gravity="center_horizontal"
                android:text="@string/fan_coin"
                android:textColor="#999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/fanCoinNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:gravity="center_horizontal"
                android:text="114粉币"
                android:textColor="#333333"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_32"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.01"
            android:background="#999999" />

        <LinearLayout
            android:id="@+id/integralLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_14"
                android:gravity="center_horizontal"
                android:text="@string/integral"
                android:textColor="#999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/integralNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:gravity="center_horizontal"
                android:text="114粉币"
                android:textColor="#333333"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="#999999" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:gravity="center_vertical"
            android:text="@string/current_balance"
            android:textColor="#999999"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/balanceNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_4"
            android:gravity="center_vertical"
            android:text="111"
            android:textColor="#333333"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_6"
        android:text="充值金额:"
        android:textColor="#999999"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42"
        android:layout_marginTop="@dimen/dp_6">

        <EditText
            android:id="@+id/rechargeMoney"
            android:textSize="@dimen/dp_14"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="#333333"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginRight="@dimen/dp_14"
            android:background="@drawable/bg_edit_input_money"
            android:hint="@string/please_input_recharge_money"
            android:paddingLeft="@dimen/dp_16"
            android:textColorHint="#999999" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_30"
            android:gravity="center_vertical"
            android:text="@string/yuan"
            android:textColor="#333333"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/chose_pay"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/text_paid_in_amount"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_96"
        android:background="@drawable/selector_red_button"
        android:text="@string/chose_pay"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/returnButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/chose_pay"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/selector_white_button"
        android:text="@string/back"
        android:textColor="@drawable/selector_text_color"
        android:textSize="15sp" />
</LinearLayout>